﻿The Cacti Group | spine

SVN
-bug#0001669: Problems with getting data from script using SPINE on Windows Server 2003 x32 
-bug: Net-snmp API issues cause spine crashes with some SNMP agents
-bug: Host list not properly initialized
-bug: Mutex locking issues cause deadlocks in Windows
-bug: Escape windows type back slashes in scripts

0.8.7g
-feature: Multi threaded host polling

0.8.7f
-bug#0001653: Transient ICMP Socket create failures causing spine to die
-bug#0001657: Spine output shows drop of latest bit from hex value 
-feature#0001629: Implement the snmp clientaddr option to bind spine to a specific local ip address
-bug#0001465: Don't check micro version when comparing installed net-snmp version to version used when building 
-bug#0001497: Prevent constant reindexes if snmp agent continually returns uptime of 0
-bug#0001510: Speedup spine resorting hosts by estimated polling time
-bug#0001519: spine enhancement for parallel collection of data at host level
-bug#0001541: Spine snmp bulk get incorrect assumes that the server SNMP Agent returns variables in same order
-bug#0001551: Spine compile problem on AIX 5
-bug#0001563: Spine Compilation Problem on sql.c
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug: Add new option to enable Net-SNMP library vs. header versions
-bug: ICMP fails on some platforms
-bug: MySQL client auto reconnect default in MySQL 5.0.71 causes spine to crash
-bug: Inconsistent behavior when the poller interval has not been set
-bug: Invalid use of FDSETSIZE can cause issue with Script Server
-bug: When performing reindex checks, spine does not trim quotes from string values resulting in reindex faiures

0.8.7e
-bug: Not all configuration paths are searched for spine.conf
-bug: If host has MAX OID's set to 0, timeouts occur
-bug: Properly detect full Cygwin installs by finding sh.exe
-bug: Don't perform TCP Ping retries in Windows. You cannot set socket send timeouts in Windows

0.8.7d